name:                advent2017
version:             0.1.0.0
synopsis:            Solution to advent2017 by Marc de Jonge
homepage:            https://github.com/marcdejonge/advent2017#readme~`
license:             WTFPL
license-file:        LICENSE
author:              Marc de Jonge
maintainer:          marcdejonge@gmail.com
copyright:           2017 Marc de Jonge
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:         Please see the README on Github at <https://github.com/marcdejonge/advent2017#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Day1, Day2, Day3, Day4, Day5, Day6, Day7
  build-depends:       base >= 4.7 && < 5
                     , split
                     , array
                     , containers
  default-language:    Haskell2010
  ghc-options:         -O2

executable advent2017-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , advent2017
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/marcdejonge/advent2017
